static/css/style.css
@import url("https://fonts.googleapis.com/css2?family=EB+Garamond:ital@0;1&family=Montserrat&display=swap");

:root {
  --garamond: "EB Garamond", serif;
  --montserrat: "Montserrat", sans-serif;
  --aqua: #29b7b7;
  --lightPurpal: #be55d1;
}

.small_svg {
  width: 1rem;
}

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

html {
  font-size: 16px;
  font-family: var(--montserrat);
}

@media screen and (max-width: 500px) {
  html {
    font-size: 13px;
  }
}

body {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  animation: opening 1s ease-in-out;
  -webkit-animation: opening 1s ease-in-out;
  background-color: rgb(228, 228, 228);
}

@keyframes opening {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

a {
  display: block;
  color: inherit;
  text-decoration: none;
  cursor: pointer;
  transition: all 0.2s ease;
  -webkit-transition: all 0.2s ease;
  -moz-transition: all 0.2s ease;
  -ms-transition: all 0.2s ease;
  -o-transition: all 0.2s ease;
}

a:hover {
  color: inherit;
  text-decoration: none;
}

a .a_card:hover {
  text-decoration: none;
}

.a {
  display: inline;
}

.px-15 {
  padding: 0 1rem;
}

.mt-10vh {
  margin-top: -10vh;
}

.center_page {
  display: flex;
  align-items: center;
}

.display_center {
  display: flex;
  justify-content: center;
}

section {
  /* height: fit-content; */
  min-height: 65vh;
}

img {
  width: 100%;
}

ul {
  margin-bottom: 0;
}

li {
  list-style: none;
}

p {
  max-width: 650px;
}

.hf {
  font-family: var(--garamond);
}

.hfi {
  font-family: var(--garamond);
  font-style: italic;
}

.hfib {
  font-family: var(--garamond);
  font-style: italic;
  font-weight: bold;
}

.aqua {
  color: var(--aqua);
}

.purpel {
  color: var(--lightPurpal);
}

.invert_shadow {
  box-shadow: 0 2px 21px -1px rgba(0, 0, 0, 1),
    0 2px 15px -1px rgba(0, 0, 0, 1) inset;
}

.back_shadow {
  box-shadow: 0 2px 21px -1px rgba(0, 0, 0, 1);
}
.back_shadow_light {
  box-shadow: 0 2px 21px -1px rgba(0, 0, 0, 0.5);
}

.container_background {
  width: 100%;
  height: 100%;
  background: whitesmoke;
}

.data_container {
  display: flex;
  max-width: 780px;
  margin: 2rem auto;
  border-radius: 15px;
  -webkit-border-radius: 15px;
  -moz-border-radius: 15px;
  -ms-border-radius: 15px;
  -o-border-radius: 15px;
}

@media screen and (max-width: 767px) {
  .data_container {
    max-width: 100%;
  }

  .btn-grad_blue,
  .btn-grad_pink {
    font-size: 0.8rem;
  }
}

.black_hr {
  margin: 1rem auto;
  color: black;
  width: 50%;
}

/**--Back-Grounds--*/

.flyers {
  background-image: url(/static/img/backgrounds/LiveBackGround.svg);
  background-size: cover;
  background-position: center center;
  background-attachment: fixed;
}

.gooeys {
  background-image: url(/static/img/backgrounds/Gooey-4.svg);
  background-size: cover;
  background-position: center center;
  background-attachment: fixed;
}

.gooey3 {
  background-image: url(/static/img/backgrounds/Gooey-3.svg);
  background-size: cover;
  background-position: center center;
  background-attachment: fixed;
}

.outer_container {
  padding: 1em;
  margin: 2em auto;
  border-radius: 20px;
  width: 100%;
}

.inner_div {
  background: rgba(248, 248, 248, 1);
  padding: 1.5em;
  margin: 2em auto;
  border-radius: 15px;
  backdrop-filter: blur(5px);
  width: 90%;
  max-width: 1200px;
}

@media screen and (max-width: 400px) {
  .inner_div h1 {
    font-size: 3rem;
  }
}

.inner_div_about {
  background: rgba(61, 61, 61, 0.76);
  padding: 1.5em;
  margin: 2em auto;
  max-width: 50%;
  border-radius: 15px;
  backdrop-filter: blur(5px);
  color: rgb(230, 228, 228);
}

/**--Button */

.remove-item {
  cursor: pointer;
}

.btn-grad_red {
  background-image: linear-gradient(
    to right,
    #ee0979 0%,
    #ff6a00 51%,
    #ee0979 100%
  );
}

.btn-grad_pink {
  border: 1px solid #bd3c81;
  background-image: linear-gradient(
    to right,
    #fbd3e9 0%,
    #bb377d 51%,
    #fbd3e9 100%
  );
}

.btn-grad_blue {
  border: 1px solid #1b3084;
  background-image: linear-gradient(
    to right,
    #1a2980 0%,
    #26d0ce 51%,
    #1a2980 100%
  );
}

.btn-grad_pink,
.btn-grad_red,
.btn-grad_blue {
  margin: 0.5em 0;
  padding: 0.5em 3em;
  text-align: center;
  text-transform: uppercase;
  transition: 0.5s;
  background-size: 200% auto;
  color: white;
  box-shadow: 0 0 20px #eee;
  border-radius: 10px;
  font-size: 1rem;
  width: 100%;
}

.btn-grad_red:hover {
  background-position: right center; /* change the direction of the change here */
  color: #fff;
  text-decoration: none;
}

.btn-grad_pink:hover {
  background-position: right center; /* change the direction of the change here */
  color: #fff;
  text-decoration: none;
}

.btn-grad_blue:hover {
  background-position: right center; /* change the direction of the change here */
  color: #fff;
  text-decoration: none;
}

/**--Bootsrap Toasts */

.message_container {
  position: fixed;
  top: 70px;
  right: 2rem;
  z-index: 9999999;
}

.custom-toast {
  overflow: visible;
}

.toast-capper {
  height: 2px;
}

/**--Nav-*/

nav {
  position: relative;
  display: flex;
  justify-content: space-between;
  align-items: center;
  min-height: 7vh;
  background-color: rgb(255, 255, 255);
  box-shadow: 0 1px 10px -2px rgba(0, 0, 0, 0.6);
  -webkit-box-shadow: 0 1px 10px -2px rgba(0, 0, 0, 0.6);
  z-index: 10;
}

.nav_logo img {
  width: 5rem;
}

.nav_list {
  padding: 0 1em;
}

.nav_links {
  display: flex;
  text-align: center;
  justify-content: space-around;
  font-family: var(--garamond);
  font-style: italic;
  font-size: 1.8em;
}

.nav_links a:hover {
  color: #fff;
  text-shadow: 2px 1px rgb(0, 0, 0);
}

.nav_icon_links {
  position: relative;
  display: flex;
  font-size: 1.2em;
  text-align: center;
  justify-content: flex-end;
}

.nav_icon_links a {
  color: rgb(29, 29, 29);
  text-decoration: none;
  margin: 0 0.5em;
}

.nav_icon_links a:hover {
  color: #fff;
  text-shadow: 2px 1px rgb(0, 0, 0);
}
/* ... */

